service/tests/models/snapshots/roles_permissions/can_assign_permission_to_role@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: result
---
Ok(
    RolePermission {
        id: ID,
        pid: PID,
        role_id: ID,
        permission_id: ID,
        created_at: DATE,
        updated_at: DATE,
    },
)
