service/tests/models/snapshots/roles_permissions/can_find_all_role_permissions@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: result
---
Ok(
    [
        RolePermission {
            id: 1007,
            pid: f6823d33-b3cb-49b9-afdb-f74c9803a1ac,
            role_id: 11,
            permission_id: 110,
            created_at: 2026-07-13T09:00:00+00:00,
            updated_at: 2026-07-13T09:00:00+00:00,
        },
        RolePermission {
            id: 1006,
            pid: cc3ec7e8-d42b-4a6d-bd49-11e136a5da76,
            role_id: 11,
            permission_id: 109,
            created_at: 2026-07-13T09:00:00+00:00,
            updated_at: 2026-07-13T09:00:00+00:00,
        },
        RolePermission {
            id: 1008,
            pid: 1275a6e5-15d4-4d0e-9ac3-c0924e7a0cdf,
            role_id: 11,
            permission_id: 111,
            created_at: 2026-07-13T09:00:00+00:00,
            updated_at: 2026-07-13T09:00:00+00:00,
        },
        RolePermission {
            id: 1009,
            pid: 20b6a2a8-4ffb-42b3-aa76-ea39aa399b9e,
            role_id: 11,
            permission_id: 112,
            created_at: 2026-07-13T09:00:00+00:00,
            updated_at: 2026-07-13T09:00:00+00:00,
        },
        RolePermission {
            id: 1005,
            pid: d4e8f6a2-7c31-4b90-b552-1f3a5c7d8202,
            role_id: 11,
            permission_id: 126,
            created_at: 2026-07-12T09:00:00+00:00,
            updated_at: 2026-07-12T09:00:00+00:00,
        },
        RolePermission {
            id: 1004,
            pid: b7c7d3b5-5e12-4a9b-a221-3c2e4f8b9101,
            role_id: 11,
            permission_id: 125,
            created_at: 2026-07-12T09:00:00+00:00,
            updated_at: 2026-07-12T09:00:00+00:00,
        },
        RolePermission {
            id: 1001,
            pid: d1cb710f-f36b-49f8-b04c-f18aa0393c79,
            role_id: 22,
            permission_id: 113,
            created_at: 2026-06-30T07:41:00+00:00,
            updated_at: 2026-06-30T07:41:00+00:00,
        },
        RolePermission {
            id: 1003,
            pid: 6643d7cd-c170-408c-a6e8-7700784d9d3d,
            role_id: 11,
            permission_id: 106,
            created_at: 2026-06-30T07:41:00+00:00,
            updated_at: 2026-06-30T07:41:00+00:00,
        },
        RolePermission {
            id: 1002,
            pid: 838de08d-66e7-4236-848b-7547fdabc48f,
            role_id: 11,
            permission_id: 103,
            created_at: 2026-06-30T07:41:00+00:00,
            updated_at: 2026-06-30T07:41:00+00:00,
        },
    ],
)
