service/tests/models/snapshots/roles_permissions/can_find_role_permissions_by_permission@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: result
---
Ok(
    [
        RolePermission {
            id: 1026,
            pid: d719bc34-880c-4cdd-abd1-a5c3b1c74e33,
            role_id: 44,
            permission_id: 113,
            created_at: 2026-07-14T09:00:00+00:00,
            updated_at: 2026-07-14T09:00:00+00:00,
        },
        RolePermission {
            id: 1011,
            pid: f0977052-7ed8-497f-965c-afff8241afdb,
            role_id: 33,
            permission_id: 113,
            created_at: 2026-07-14T09:00:00+00:00,
            updated_at: 2026-07-14T09:00:00+00:00,
        },
        RolePermission {
            id: 1001,
            pid: d1cb710f-f36b-49f8-b04c-f18aa0393c79,
            role_id: 22,
            permission_id: 113,
            created_at: 2026-06-30T07:41:00+00:00,
            updated_at: 2026-06-30T07:41:00+00:00,
        },
    ],
)
