service/tests/models/snapshots/roles_permissions/can_find_role_permissions_by_role_and_permission@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: result
---
Ok(
    [
        RolePermission {
            id: 1003,
            pid: 6643d7cd-c170-408c-a6e8-7700784d9d3d,
            role_id: 11,
            permission_id: 106,
            created_at: 2026-06-30T07:41:00+00:00,
            updated_at: 2026-06-30T07:41:00+00:00,
        },
    ],
)
