service/tests/models/snapshots/roles_permissions/can_revoke_permission_from_role@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: "(revoked, remaining)"
---
(
    Ok(
        RolePermission {
            id: ID,
            pid: PID,
            role_id: ID,
            permission_id: ID,
            created_at: DATE,
            updated_at: DATE,
        },
    ),
    Ok(
        [],
    ),
)
