service/tests/models/snapshots/roles_permissions/cannot_assign_permission_when_role_already_has_permission@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Role already has permission assigned",
    ),
)
