service/tests/models/snapshots/roles_permissions/cannot_revoke_permission_that_is_not_assigned@roles_permissions.snap
---
source: tests/models/roles_permissions.rs
expression: "(revoked, remaining)"
---
(
    Err(
        EntityNotFound,
    ),
    Ok(
        [],
    ),
)
